src-ken&y/objects/Accounting_Default_Segment_Definition__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Defines the GL Segments, their associated objects, and the field on the Accounting Default</description>
    <fields>
        <fullName>Accounting_Default_Field__c</fullName>
        <label>Accounting Default Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Segment_Number__c</fullName>
        <label>Segment Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Accounting Default Segment Definition</label>
</CustomObject>